# firmware-smmstore

./: Cargo.toml  Makefile  README.md  firmware-smmstore.inf  rust-toolchain  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: read.rs
src/: coreboot.rs  lib.rs  main.rs  smmstore.rs  v1.rs  v2.rs  variable.rs  volume.rs
